--- a/src/main/resources/DoctorPage.fxml
+++ b/src/main/resources/DoctorPage.fxml
@@ -1,58 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="800.0" maxWidth="1200.0" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UserController">
-   <children>
-      <ImageView fitHeight="54.0" fitWidth="189.0" layoutX="14.0" layoutY="14.0">
-         <image>
-            <Image url="@images/cfLLaKI.png" />
-         </image>
-      </ImageView>
-      <HBox alignment="CENTER" layoutX="1018.0" layoutY="28.0" spacing="10.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="(Doctor Name)" />
-            <Button fx:id="logout_btn" mnemonicParsing="false" onAction="#onLogoutClick" text="%logout" />
-         </children>
-      </HBox>
-      <ImageView fitHeight="692.0" fitWidth="593.0" layoutX="304.0" layoutY="94.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
-         </image>
-      </ImageView>
-      <Separator layoutX="13.0" layoutY="80.0" prefHeight="0.0" prefWidth="1174.0" />
-      <VBox alignment="TOP_CENTER" layoutX="415.0" layoutY="494.0" spacing="15.0">
-         <children>
-            <Label fx:id="emergency_label" text="%emergency_label" textFill="RED">
-               <font>
-                  <Font size="60.0" />
-               </font>
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UserController">
+   <top>
+      <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
+         <left>
+            <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="10.0" />
+               </BorderPane.margin>
             </Label>
-            <Label fx:id="emergency_title" text="Title">
-               <font>
-                  <Font name="System Bold" size="36.0" />
-               </font></Label>
-            <Label fx:id="emergency_details" text="la la la la lala la la la lala la la la la">
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </Label>
+         </left>
+         <right>
+            <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 18;" text="(Doctor Name)" />
+                  <JFXButton fx:id="logout_btn" buttonType="RAISED" onAction="#onLogoutClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%logout" />
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </HBox>
+         </right>
+      </BorderPane>
+   </top>
+   <center>
+      <StackPane prefHeight="553.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="692.0" fitWidth="593.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
+               </image>
+            </ImageView>
+            <fx:include fx:id="serviceArea" layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0" source="ServiceAreaRequests.fxml" />
+            <VBox alignment="BOTTOM_CENTER" spacing="15.0">
+               <children>
+                  <Label fx:id="emergency_label" text="%emergency_label" textFill="RED">
+                     <font>
+                        <Font size="60.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="emergency_title" text="Title">
+                     <font>
+                        <Font name="System Bold" size="36.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="emergency_details" text="la la la la lala la la la lala la la la la">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Label>
+                  <JFXButton buttonType="RAISED" onAction="#openLog" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%view_log" />
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <StackPane.margin>
+                  <Insets top="450.0" />
+               </StackPane.margin>
+               <padding>
+                  <Insets bottom="40.0" />
+               </padding>
+            </VBox>
          </children>
-      </VBox>
-      <fx:include fx:id="serviceArea" layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0" source="ServiceAreaRequests.fxml" />
-      <Button layoutX="545.0" layoutY="696.0" mnemonicParsing="false" onAction="#openLog" text="%view_log">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Button>
-   </children>
-</AnchorPane>
+      </StackPane>
+   </center>
+</BorderPane>
