--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -1,84 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
+<?import com.gluonhq.charm.glisten.control.ExpansionPanel?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXToggleButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageController">
-   <children>
-      <ImageView fitHeight="54.0" fitWidth="189.0" layoutX="14.0" layoutY="14.0">
-         <image>
-            <Image url="@images/cfLLaKI.png" />
-         </image>
-      </ImageView>
-      <HBox layoutX="874.0" layoutY="28.0" spacing="10.0">
+
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageController">
+   <top>
+      <ExpansionPanel fx:id="exp_panel" prefWidth="1200.0" BorderPane.alignment="CENTER">
+         <expandedContent>
+            <BorderPane prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
+               <left>
+                  <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
+                     <BorderPane.margin>
+                        <Insets left="10.0" />
+                     </BorderPane.margin>
+                  </Label>
+               </left>
+               <right>
+                  <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label fx:id="wrong_credentials" prefHeight="17.0" prefWidth="210.0" textFill="WHITE" />
+                        <TextField fx:id="username" alignment="CENTER" prefHeight="19.0" prefWidth="116.0" promptText="%username" style="-fx-background-color: #ffffff; -fx-font-size: 18;" />
+                        <PasswordField fx:id="password" alignment="CENTER" layoutX="1000.0" prefWidth="116.0" promptText="%password" style="-fx-background-color: #ffffff; -fx-font-size: 18;" />
+                        <JFXButton fx:id="login_btn" buttonType="RAISED" contentDisplay="CENTER" onAction="#onLoginClick" ripplerFill="BLACK" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%login" />
+                     </children>
+                     <BorderPane.margin>
+                        <Insets right="40.0" />
+                     </BorderPane.margin>
+                  </HBox>
+               </right>
+            </BorderPane>
+         </expandedContent>
+         <collapsedContent>
+            <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
+               <left>
+                  <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
+                     <BorderPane.margin>
+                        <Insets left="10.0" />
+                     </BorderPane.margin>
+                  </Label>
+               </left>
+            </BorderPane>
+         </collapsedContent>
+      </ExpansionPanel>
+   </top>
+   <center>
+      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="username" alignment="CENTER" prefHeight="19.0" prefWidth="116.0" promptText="%username" />
-            <PasswordField fx:id="password" alignment="CENTER" prefWidth="116.0" promptText="%password" />
-            <Button fx:id="login_btn" mnemonicParsing="false" onAction="#onLoginClick" text="%login" />
+            <ImageView fitHeight="692.0" fitWidth="593.0" opacity="0.05" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
+               <image>
+                  <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
+               </image>
+               <StackPane.margin>
+                  <Insets top="30.0" />
+               </StackPane.margin>
+            </ImageView>
+            <VBox alignment="TOP_CENTER" prefHeight="438.0" prefWidth="1200.0" spacing="50.0">
+               <children>
+                  <JFXComboBox focusColor="#4863a0" labelFloat="true" promptText="%quick_locations" style="-fx-font-size: 23; -fx-text-align: center;" />
+                  <JFXComboBox fx:id="combobox_start" focusColor="#4863a0" labelFloat="true" promptText="%start_location" style="-fx-font-size: 23;" />
+                  <JFXComboBox fx:id="combobox_end" labelFloat="true" promptText="%end_location" style="-fx-font-size: 23; -jfx-focus-color-font-size: 12;" />
+                  <JFXToggleButton style="-fx-font-size: 23;" text="%stairs" toggleColor="#b7b8b6" toggleLineColor="#4863a0" />
+                  <JFXButton fx:id="pathfind" buttonType="RAISED" onAction="#onPathfindClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%directions_button" />
+               </children>
+               <StackPane.margin>
+                  <Insets top="40.0" />
+               </StackPane.margin>
+            </VBox>
          </children>
-      </HBox>
-      <Separator layoutX="13.0" layoutY="80.0" prefHeight="0.0" prefWidth="1174.0" />
-      <ImageView fitHeight="692.0" fitWidth="593.0" layoutX="304.0" layoutY="94.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
-         </image>
-      </ImageView>
-      <VBox alignment="TOP_CENTER" layoutY="120.0" prefHeight="438.0" prefWidth="1200.0" spacing="50.0">
-         <children>
-            <MenuButton contentDisplay="CENTER" mnemonicParsing="false" text="%quick_locations">
-              <items>
-                <MenuItem mnemonicParsing="false" text="%exit" />
-                <MenuItem mnemonicParsing="false" text="%cafeteria" />
-                  <MenuItem mnemonicParsing="false" text="%reception" />
-                  <MenuItem mnemonicParsing="false" text="%restroom" />
-              </items>
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </MenuButton>
-            <ComboBox fx:id="combobox_start" promptText="%select_location" style="-fx-font-size: 23;" />
-            <ComboBox fx:id="combobox_end" promptText="%select_location" style="-fx-font-size: 23;" />
-            <CheckBox mnemonicParsing="false" text="%stairs">
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </CheckBox>
-            <Button fx:id="pathfind" mnemonicParsing="false" onAction="#onPathfindClick" text="%directions_button">
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <Label layoutX="558.0" layoutY="191.0" text="%start_location" textFill="#7c7c7c">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="571.0" layoutY="294.0" text="%end_location" textFill="#7c7c7c">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Label fx:id="wrong_credentials" layoutX="645.0" layoutY="33.0" prefHeight="17.0" prefWidth="210.0" textFill="RED" />
-      <MenuButton fx:id="language_selector" layoutX="542.0" layoutY="37.0" mnemonicParsing="false" text="%language">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-      </MenuButton>
-   </children>
-</AnchorPane>
+      </StackPane>
+   </center>
+</BorderPane>
