--- a/src/main/resources/Log.fxml
+++ b/src/main/resources/Log.fxml
@@ -1,39 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogController">
-    <children>
-        <Separator layoutX="13.0" prefHeight="100.0" prefWidth="1174.0">
-            <padding>
-                <Insets top="80.0" />
-            </padding>
-        </Separator>
-        <ImageView fitHeight="54.0" fitWidth="189.0" layoutX="14.0" layoutY="14.0">
-            <image>
-                <Image url="@images/cfLLaKI.png" />
-            </image>
-        </ImageView>
-        <HBox alignment="CENTER" layoutX="1018.0" layoutY="30.0" spacing="10.0">
-            <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="(Admin Name)" />
-                <Button fx:id="back_btn" mnemonicParsing="false" onAction="#onBackClick" text="%back" />
-            </children>
-        </HBox>
-      <TableView fx:id="log_table" layoutX="224.0" layoutY="119.0" prefHeight="628.0" prefWidth="753.0">
+
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogController">
+   <top>
+      <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
+         <left>
+            <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="10.0" />
+               </BorderPane.margin>
+            </Label>
+         </left>
+         <right>
+            <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 18;" text="(Admin Name)" />
+                  <JFXButton fx:id="back_btn" buttonType="RAISED" onAction="#onBackClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%back" />
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </HBox>
+         </right>
+      </BorderPane>
+   </top>
+   <center>
+      <TableView fx:id="log_table" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn prefWidth="138.0" text="C1" />
           <TableColumn prefWidth="141.0" text="C2" />
         </columns>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
       </TableView>
-    </children>
-</AnchorPane>
+   </center>
+</BorderPane>
