--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyMapController">
-    <children>
-        <Separator layoutX="13.0" prefHeight="100.0" prefWidth="1174.0">
-            <padding>
-                <Insets top="80.0" />
-            </padding>
-        </Separator>
-        <ImageView fitHeight="54.0" fitWidth="189.0" layoutX="14.0" layoutY="14.0">
-            <image>
-                <Image url="@images/cfLLaKI.png" />
-            </image>
-        </ImageView>
-        <HBox alignment="CENTER" layoutX="1018.0" layoutY="30.0" spacing="10.0">
-            <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="(Admin Name)" />
-                <Button fx:id="back_btn" mnemonicParsing="false" onAction="#onBackClick" text="%back" />
-            </children>
-        </HBox>
-        <ImageView fx:id="trash_can" fitHeight="40.0" fitWidth="46.0" layoutX="1120.0" layoutY="702.0" onMouseClicked="#onTrashCanClick" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@images/59-512.png" />
-            </image>
-        </ImageView>
-        <ScrollPane layoutX="14.0" layoutY="100.0" prefHeight="690.0" prefWidth="900.0">
+
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyMapController">
+   <top>
+      <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
+         <left>
+            <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="10.0" />
+               </BorderPane.margin>
+            </Label>
+         </left>
+         <right>
+            <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 18;" text="(Admin Name)" />
+                  <JFXButton fx:id="back_btn" buttonType="RAISED" onAction="#onBackClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%back" />
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </HBox>
+         </right>
+      </BorderPane>
+   </top>
+   <center>
+        <ScrollPane prefHeight="690.0" prefWidth="900.0" BorderPane.alignment="CENTER">
             <content>
                 <AnchorPane fx:id="pane" layoutX="-500.0" layoutY="-500.0" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick" prefHeight="1050.0" prefWidth="1250.0">
                     <children>
@@ -50,54 +54,84 @@
                     </children>
                 </AnchorPane>
             </content>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
         </ScrollPane>
-        <VBox alignment="TOP_CENTER" layoutX="922.0" layoutY="100.0" prefHeight="480.0" prefWidth="247.0" spacing="15.0">
-            <children>
-                <TextField fx:id="floor" alignment="CENTER" prefHeight="50.0" prefWidth="119.0" promptText="%floor">
-                    <font>
+   </center>
+   <right>
+      <VBox alignment="TOP_CENTER" prefHeight="740.0" prefWidth="242.0" BorderPane.alignment="CENTER">
+         <children>
+              <VBox alignment="TOP_CENTER" prefHeight="480.0" prefWidth="232.0" spacing="15.0">
+                  <children>
+                  <JFXTextField fx:id="floor" alignment="CENTER" focusColor="#4863a0" promptText="%floor">
+                     <font>
                         <Font size="23.0" />
-                    </font>
-                </TextField>
-                <TextField fx:id="building" alignment="CENTER" prefHeight="50.0" prefWidth="119.0" promptText="%building">
-                    <font>
+                     </font>
+                  </JFXTextField>
+                  <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0" promptText="%building">
+                     <font>
                         <Font size="23.0" />
-                    </font>
-                </TextField>
-                <TextField fx:id="loc_type" alignment="CENTER" prefHeight="50.0" prefWidth="119.0" promptText="%location_type">
-                    <font>
+                     </font>
+                  </JFXTextField>
+                  <JFXTextField fx:id="loc_type" alignment="CENTER" focusColor="#4863a0" promptText="%location_type">
+                     <font>
                         <Font size="23.0" />
-                    </font>
-                </TextField>
-                <TextField fx:id="long_name" alignment="CENTER" prefHeight="50.0" prefWidth="119.0" promptText="%long_name">
-                    <font>
+                     </font>
+                  </JFXTextField>
+                  <JFXTextField fx:id="long_name" alignment="CENTER" focusColor="#4863a0" promptText="%long_name">
+                     <font>
                         <Font size="23.0" />
-                    </font>
-                </TextField>
-                <TextField fx:id="short_name" alignment="CENTER" prefHeight="50.0" prefWidth="247.0" promptText="%short_name">
-                    <font>
+                     </font>
+                  </JFXTextField>
+                  <JFXTextField fx:id="short_name" alignment="CENTER" focusColor="#4863a0" promptText="%short_name">
+                     <font>
                         <Font size="23.0" />
-                    </font>
-                </TextField>
-            <CheckBox fx:id="add_edge_check" mnemonicParsing="false" text="%add_path">
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </CheckBox>
-                <Button fx:id="add_loc" alignment="CENTER" mnemonicParsing="false" onAction="#onAddLocClick" text="%add_location">
-                    <font>
+                     </font>
+                  </JFXTextField>
+                  <JFXCheckBox fx:id="add_edge_check" checkedColor="#4863a0" text="%add_path">
+                     <font>
                         <Font size="23.0" />
-                    </font>
-                </Button>
-                <Label fx:id="add_loc_fail" textFill="RED" />
-            </children>
-        </VBox>
-        <Button fx:id="add_loc_cancel" layoutX="922.0" layoutY="700.0" mnemonicParsing="false" onAction="#onAddLocCancelClick" prefHeight="44.0" prefWidth="132.0" text="Cancel" visible="false">
-            <font>
-                <Font size="23.0" />
-            </font></Button>
-        <Button fx:id="delete_loc_cancel" layoutX="922.0" layoutY="700.0" mnemonicParsing="false" onAction="#onDeleteLocCancelClick" prefHeight="44.0" prefWidth="132.0" text="Cancel" visible="false">
-            <font>
-                <Font size="23.0" />
-            </font></Button>
-    </children>
-</AnchorPane>
+                     </font>
+                  </JFXCheckBox>
+                  <JFXButton fx:id="add_loc" buttonType="RAISED" onAction="#onAddLocClick" style="-fx-background-color: #B7B8B6;" text="%add_location">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </JFXButton>
+                      <Label fx:id="add_loc_fail" textFill="RED" />
+                  </children>
+              </VBox>
+            <HBox alignment="BOTTOM_CENTER" spacing="30.0">
+               <children>
+                  <StackPane>
+                     <children>
+                          <Button fx:id="add_loc_cancel" mnemonicParsing="false" onAction="#onAddLocCancelClick" prefHeight="44.0" prefWidth="132.0" text="Cancel" visible="false">
+                              <font>
+                                  <Font size="23.0" />
+                              </font>
+                        </Button>
+                          <Button fx:id="delete_loc_cancel" mnemonicParsing="false" onAction="#onDeleteLocCancelClick" prefHeight="44.0" prefWidth="132.0" text="Cancel" visible="false">
+                              <font>
+                                  <Font size="23.0" />
+                              </font>
+                        </Button>
+                     </children>
+                  </StackPane>
+                    <ImageView fx:id="trash_can" fitHeight="40.0" fitWidth="46.0" onMouseClicked="#onTrashCanClick" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@images/59-512.png" />
+                        </image>
+                    </ImageView>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+         </children>
+         <BorderPane.margin>
+            <Insets left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </VBox>
+   </right>
+</BorderPane>
