--- a/src/main/resources/ServiceAreaRequests.fxml
+++ b/src/main/resources/ServiceAreaRequests.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -28,32 +28,32 @@
                   <Font size="30.0" />
                </font>
             </Text>
-            <ComboBox fx:id="request_type_selector" prefHeight="44.0" prefWidth="229.0" promptText="%service_type" style="-fx-font-size: 23;" />
-            <TextField fx:id="service_title" alignment="CENTER" layoutX="110.0" layoutY="283.0" promptText="%service_title">
+            <JFXComboBox fx:id="request_type_selector" focusColor="#4863a0" promptText="%service_type" style="-fx-font-size: 23;" />
+            <JFXTextField fx:id="service_title" alignment="CENTER" focusColor="#4863a0" promptText="%service_title">
                <font>
                   <Font size="23.0" />
                </font>
                <VBox.margin>
                   <Insets left="70.0" right="70.0" />
                </VBox.margin>
-            </TextField>
-            <TextField fx:id="service_location" alignment="CENTER" promptText="%service_location">
+            </JFXTextField>
+            <JFXTextField fx:id="service_location" alignment="CENTER" focusColor="#4863a0" promptText="%service_location">
                <font>
                   <Font size="23.0" />
                </font>
                <VBox.margin>
                   <Insets left="70.0" right="70.0" />
                </VBox.margin>
-            </TextField>
+            </JFXTextField>
             <TextArea fx:id="description_field" maxHeight="-Infinity" prefHeight="50.0" prefWidth="200.0" promptText="%service_description">
                <font>
                   <Font size="23.0" />
                </font></TextArea>
-            <Button fx:id="request_service_button" mnemonicParsing="false" onAction="#doRequestService" text="%service_request_button">
+            <JFXButton fx:id="request_service_button" buttonType="RAISED" onAction="#doRequestService" style="-fx-background-color: #B7B8B6;" text="%service_request_button">
                <font>
                   <Font size="23.0" />
                </font>
-            </Button>
+            </JFXButton>
          </children>
          <padding>
             <Insets left="30.0" right="30.0" top="25.0" />
@@ -66,7 +66,7 @@
                   <Font size="30.0" />
                </font>
             </Text>
-            <ComboBox fx:id="active_requests_box" onAction="#loadRequestInfo" prefHeight="44.0" prefWidth="235.0" promptText="%my_requests" style="-fx-font-size: 23;" />
+            <JFXComboBox fx:id="active_requests_box" focusColor="#4863a0" onAction="#loadRequestInfo" promptText="%my_requests" style="-fx-font-size: 23;" />
             <Text fx:id="title_text" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                <font>
                   <Font size="23.0" />
@@ -79,15 +79,18 @@
                <font>
                   <Font size="23.0" />
                </font></TextArea>
-            <Button fx:id="mark_completed_btn" mnemonicParsing="false" onAction="#markComplete" text="%mark_completed_button">
+            <JFXButton fx:id="mark_completed_btn" buttonType="RAISED" onAction="#markComplete" style="-fx-background-color: #B7B8B6;" text="%mark_completed_button">
                <font>
                   <Font size="23.0" />
                </font>
-            </Button>
+            </JFXButton>
          </children>
          <padding>
             <Insets left="30.0" right="30.0" top="25.0" />
          </padding>
       </VBox>
    </children>
+   <padding>
+      <Insets top="40.0" />
+   </padding>
 </GridPane>
